# endf-userpy

./: .gitattributes  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: wheels.yml
endf_userpy/: __init__.py  conversion.py  distribution1d.py  distribution2d.py  endf_interpretation.py  helpers.py  interpolation.py  mf1_interpretation.py  mf3_interpretation.py  mf4_interpretation.py  mf4_interpretation_fort.py  mf5_interpretation.py  mf6_interpretation.py  mf6_interpretation_fortran.py  mf6_interpretation_helpers.py  mf6_interpretation_subsecs.py  physical_constants.py  properties.py  quantities.py  reactions.py
endf_userpy/fortran/: endf6-f2pywrappers.f  endf6.f90  endf6module.c
endf_userpy/mfsec_interpretation/: mf10_interpretation.py  mf12_interpretation.py  mf12_interpretation_helpers.py  mf13_interpretation.py  mf14_interpretation.py  mf15_interpretation.py  mf1_interpretation.py  mf3_interpretation.py  mf4_interpretation.py  mf4_interpretation_fort.py  mf4_interpretation_helpers.py  mf5_interpretation.py  mf6_interpretation.py  mf6_interpretation_helpers.py  mf6_interpretation_integrals.py  mf6_interpretation_subsecs.py  mf8_interpretation.py  mf9_interpretation.py
endf_userpy/primitives/: conversion.py  conversion_relativistic.py  convolution.py  helpers.py  interpolation.py  physical_constants.py  properties.py  reactions.py
endf_userpy/primitives/raw_aux_scripts/: relativistic_conversion_derivation.py
endf_userpy/quantities_mt_zap/: ddx_broadening.py  discrete_distribution1d.py  discrete_quantities.py  distribution1d.py  distribution1d_helpers.py  distribution2d.py  quantities.py  selectors.py
endf_userpy/resonance/: benchmark.py  main.py  physics.py  preprocessing.py  reconstruction.py  requirements.txt  sensitivity.py  test_reconstruction.py
examples/: 01_inspect_file.py  02_reaction_xs.py  03_particle_production_xs.py  04_residual_production_isomers.py  05_emission_spectra_14mev.py  06_ddx_uranium_14mev.py  07_photonuclear_residuals.py  ddxs_plotting.ipynb  ddxs_plotting.py  dxs_plotting.ipynb  dxs_plotting.py
tests/: adhoc_test_mf4_legendre_representation.py  conftest.py  file_feature_search.py  manual_test_mf4.py  manual_test_mf6.py  test_convolution.py  test_ddx_broadening.py  test_distribution1d.py  test_get_particle_production_ddxs_broadening.py  test_mf4_interpretation.py  test_mf4_legendre_representation.py  test_mf5_interpretation.py  test_mf6_interpretation.py  test_selectors.py  wheel_smoke.py
tests/data/: jeff33_1-H-2g_mf4_mt2.endf  jeff33_13-Al-27g_mf4_mt2.endf  jeff33_63-Eu-152m_mf4_mt2.endf
tests_fortran/: Tb158.endf  Tb158.inp  test6_endf6.f90  test6_integ.f90  testlaw5.f90  testyields.f90
