[build-system]
requires = ["setuptools", "wheel", "numpy>=2.0"]
build-backend = "setuptools.build_meta"


[tool.cibuildwheel]
# CPython 3.9 through 3.13.
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
# musllinux: gfortran static-link issues with musl.
# *-win32 / *-manylinux_i686: skip 32-bit.
# *-manylinux_aarch64: aarch64 needs QEMU; not enabled in this workflow yet.
skip = "*-musllinux_* *-win32 *-manylinux_i686 *-manylinux_aarch64"
# Smoke test that loads the Fortran extension and the public API.
test-command = 'python -c "import endf_userpy.fortran.endf6 as ef; from endf_userpy.quantities import get_reaction_xs; print(ef.__file__)"'

[tool.cibuildwheel.linux]
# manylinux_2_28 (AlmaLinux 8 based) ships gcc-toolset-12 with gfortran.
manylinux-x86_64-image = "manylinux_2_28"
before-all = "dnf install -y gcc-gfortran || yum install -y gcc-gfortran"
archs = ["x86_64"]

[tool.cibuildwheel.macos]
archs = ["auto"]

# Homebrew arm64 gcc@13 bottle targets macOS 14, so the wheel that
# bundles its libgfortran/libquadmath has to advertise the same.
[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64"
environment.MACOSX_DEPLOYMENT_TARGET = "14.0"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
# delvewheel bundles the Fortran/MinGW runtime DLLs into the wheel.
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
