[build-system]
requires = ["setuptools", "wheel", "numpy>=2.0"]
build-backend = "setuptools.build_meta"


[tool.cibuildwheel]
# CPython 3.9 through 3.13.
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
# musllinux: gfortran static-link issues with musl.
# *-win32 / *-manylinux_i686: skip 32-bit.
# *-manylinux_aarch64: aarch64 needs QEMU; not enabled in this workflow yet.
skip = "*-musllinux_* *-win32 *-manylinux_i686 *-manylinux_aarch64"
# Wheel smoke test: builds an MF6 LAW1 distribution for Be-9 (n,2n),
# which delegates to the Fortran feep_*_law1con routines. If the
# extension or its bundled runtime libs are broken on a given
# platform, this fails before the wheel ever ships.
test-sources = [
    "tests/wheel_smoke.py",
    "tests/data/n-004_Be_009.endf",
]
test-command = "python tests/wheel_smoke.py"

[tool.cibuildwheel.linux]
# manylinux_2_28 (AlmaLinux 8 based) ships gcc-toolset-12 with gfortran.
manylinux-x86_64-image = "manylinux_2_28"
before-all = "dnf install -y gcc-gfortran || yum install -y gcc-gfortran"
archs = ["x86_64"]

[tool.cibuildwheel.macos]
archs = ["auto"]

# Homebrew arm64 gcc@13 bottle targets macOS 14, so the wheel that
# bundles its libgfortran/libquadmath has to advertise the same.
[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64"
environment.MACOSX_DEPLOYMENT_TARGET = "14.0"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
# delvewheel bundles the Fortran/MinGW runtime DLLs into the wheel.
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
